--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="prodesigner poppins-bold">Proved By prodesigner</p>
         <h2 class="poppins-bold">Work that we produce for our clients</h2>
         <p class="legend1 poppins-medium">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
-        <button class="btnDetails poppins-medium">Get more details</button>
+        <a href="/pages/error/error.html"><button class="btnDetails poppins-medium">Get more details</button></a>
       </div>
       <img src="images/mainPage/section1/joystick.png" class="joystick">
     </section>
@@ -42,7 +42,7 @@
     <section class="gameSection">
       <div class="trendingGames">
         <h3 class="poppins-bold">Currently Trending Games</h3>
-        <button class="btnGames poppins-medium">SEE ALL</button>
+        <a href="/pages/error/error.html"><button class="btnGames poppins-medium">SEE ALL</button></a>
       </div>
       <div class="galery">
         <div class="card">
@@ -140,7 +140,7 @@
           <img src="images/mainPage/section5/image5.png">
           <img src="images/mainPage/section5/image6.png">
         </div>
-        <button class="btnProjects rubik-medium">SEE ALL</button>
+        <a href="/pages/error/error.html"><button class="btnProjects rubik-medium">SEE ALL</button></a>
       </section>
 
       <section class="newsEmail">
